bug fix, align the equal button

--- a/CSS/calculator.css
+++ b/CSS/calculator.css
@@ -83,7 +83,7 @@ button {
     vertical-align: bottom;
     position: absolute;
     bottom: 0px;
-    right: 7px;
+    right: 13px;
     background-image: linear-gradient(#ff8d23, #f17612);
 }
 #number_equal:active {
